# fleet-mind

./: .editorconfig  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURE.md  AUTONOMOUS_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_COMPLETE_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_GENERATION9_COMPLETE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.production  EXECUTION_SUMMARY.md  GENERATION2_IMPLEMENTATION_REPORT.md  GENERATION3_IMPLEMENTATION_REPORT.md  GENERATION4_QUANTUM_LEAP_IMPLEMENTATION_REPORT.md  GENERATION5_NEXT_FRONTIER_IMPLEMENTATION_REPORT.md  GENERATION8_PROGRESSIVE_QUALITY_GATES_COMPLETE.md  PROJECT_CHARTER.md  QUALITY_GATES_REPORT.md  README.md  README_UPDATED.md  SDLC_COMPLETION_SUMMARY.md  academic_publication_toolkit.py  autonomous_research_breakthrough.py  autonomous_research_execution.py  autonomous_research_execution_simplified.py  autonomous_sdlc_quality_gates.py  autonomous_validation_report_e18b83e8-bec7-450c-bdae-83013cc7835a.json  basic_swarm_coordinator_demo.py  comprehensive_quality_gates.py  comprehensive_quality_gates_validation.py  demo_basic_functionality.py  demo_generation3_scalable.py  demo_generation4_quantum_leap.py  demo_generation5_next_frontier.py  demo_generation6_ultimate_convergence.py  (+52 more)
config/: global-deployment.yaml
deploy/kubernetes/: fleet-mind-deployment.yaml
deploy/production/: production_deployment_guide.md
docker/: fleet-mind-communication.dockerfile  fleet-mind-coordinator.dockerfile  fleet-mind-planner.dockerfile  fleet-mind-research.dockerfile  fleet-mind-security.dockerfile  fleet-mind-ui.dockerfile
docs/: ROADMAP.md
docs/adr/: 0001-architecture-decision-record-template.md  0002-llm-backend-selection.md
examples/: __init__.py  basic_mission.py  formation_demo.py  research_benchmark.py
fleet_mind/: __init__.py  cli.py
fleet_mind/bio_hybrid/: __init__.py  bio_hybrid_drone.py  biological_sensor.py  synaptic_interface.py
fleet_mind/communication/: __init__.py  high_performance_comm.py  latent_encoder.py  webrtc_streamer.py
fleet_mind/consciousness/: __init__.py  collective_intelligence.py  emergent_behavior.py  swarm_consciousness.py
fleet_mind/convergence/: __init__.py  ultimate_coordinator.py
fleet_mind/coordination/: __init__.py  swarm_coordinator.py
fleet_mind/dimensional/: __init__.py  multidimensional_coordinator.py  quantum_tunnel.py  spacetime_navigation.py
fleet_mind/edge_computing/: __init__.py  edge_ai_deployment.py  edge_coordinator.py  federated_learning.py  network_5g.py
fleet_mind/evolution/: __init__.py  autonomous_design.py  genetic_optimizer.py  self_evolving_swarm.py
fleet_mind/fleet/: __init__.py  drone_fleet.py
fleet_mind/i18n/: __init__.py  compliance.py  localization.py
fleet_mind/monitoring/: __init__.py  health_monitor.py
fleet_mind/neuromorphic/: __init__.py  adaptive_memory.py  (+3 more)
k8s/: README.md  configmap.yaml  coordinator-deployment.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  production-optimized.yaml  production.yaml  redis-deployment.yaml  security.yaml
publications/: aaai_2025_metadata.json  aaai_2025_submission.tex  nature_mi_metadata.json  nature_mi_submission.tex  neurips_2025_metadata.json  neurips_2025_submission.tex  submission_checklist.md
scripts/: deploy-global.sh  deploy-k8s.sh  run_tests.py  validate_structure.py
tests/: __init__.py  test_comprehensive_integration.py  test_generation2_robustness.py  test_integration_robust.py  test_performance_monitor.py  test_robust_systems.py  test_swarm_coordinator.py  test_webrtc_streamer.py
(+137 files in other folders)
